@@ -11,3 +11,4 @@ const LMS_SERVER_STATUS_REFRESH = 10000;
 const LMS_STATUS_REFRESH_MIN = 1000;
 const LMS_STATUS_REFRESH_MAX = 3000;
 
+const LMS_DEFAULT_LIBRARY = "0";
